--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   },
   "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
   "main": "index.js",
+  "homepage": "https://KhadijaNoor777.github.io/react_posts_app",
   "devDependencies": {
     "gh-pages": "^3.1.0"
   },
